variables.RunFour.scala.code
var x=0
while (x != 4) && (isOnBaggle()==false) {
  forward()
}